; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/iwi/extr_if_iwi.c_iwi_setcurchan.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/iwi/extr_if_iwi.c_iwi_setcurchan.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iwi_softc = type { i32, %struct.ieee80211com }
%struct.ieee80211com = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.iwi_softc*, i32)* @iwi_setcurchan to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @iwi_setcurchan(%struct.iwi_softc* %0, i32 %1) #0 {
  %3 = alloca %struct.iwi_softc*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.ieee80211com*, align 8
  store %struct.iwi_softc* %0, %struct.iwi_softc** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.iwi_softc*, %struct.iwi_softc** %3, align 8
  %7 = getelementptr inbounds %struct.iwi_softc, %struct.iwi_softc* %6, i32 0, i32 1
  store %struct.ieee80211com* %7, %struct.ieee80211com** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.iwi_softc*, %struct.iwi_softc** %3, align 8
  %10 = getelementptr inbounds %struct.iwi_softc, %struct.iwi_softc* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 4
  %11 = load %struct.ieee80211com*, %struct.ieee80211com** %5, align 8
  %12 = call i32 @ieee80211_radiotap_chan_change(%struct.ieee80211com* %11)
  ret void
}

declare dso_local i32 @ieee80211_radiotap_chan_change(%struct.ieee80211com*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
